[package]
name = "tribe"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/rapodaca/tribe"
description = "A command line utility for compiling family histories from flat-file sources."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
yaml-rust = "0.4"
handlebars = "5.0.0"
serde_json = "1.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = { version = "0.9" }
